--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
-tensorflow=1.15
-keras=2.3.1
+# tensorflow=1.15
+# tf-agents=0.3.0
+# tensorflow-probability=0.9.0
+# gast=0.2.2
+# decorator=5.1.1
+# gin-config=0.1.3
+# keras=2.3.1
+keras
+keras-rl
+gym
+pandas
+numpy
+matplotlib
